test/invalid/DoubleClassToken/DoubleClassToken.plume
/**
 * @author Robin Burgess 36815
 */
 class class DoubleClassToken extends Object is
 	field h : Integer
 	field t : Integer
 	method totalValue : () -> Integer is
 		t + h